@@ -1,3 +1,12 @@
+2013-02-10: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* Framework/PCProjectInspector.m
+	* Modules/Editors/ProjectCenter/SyntaxDefinition.m
+	* Modules/Editors/ProjectCenter/SyntaxHighlighter.m
+	* Modules/Editors/ProjectCenter/TextPattern.m
+	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
+	  some more (unsigned) int -> NS(U)Integer transitions
+	  and some shutup of clang compiler warnings
+
 2013-02-09 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* Framework/PCFileCreator.m
 	* Framework/PCMakefileFactory.m
